Try to fix google analytics

--- a/site/config.toml
+++ b/site/config.toml
@@ -8,5 +8,6 @@ title = "Aus dem Bauch heraus"
 # https://gohugo.io/getting-started/configuration/#toml-configuration
 disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
 
-googleAnalytics = "G-GXV6W79DKP"
+# googleAnalytics id below is not used because. Instead stuff is "hardcoded" in head.html
+# googleAnalytics = "G-GXV6W79DKP"
 summaryLength = 20
